// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refresh function first test 1`] = `
<View>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="small"
  />
</View>
`;

exports[`refresh function second test 1`] = `
<RCTScrollView
  contentInset={
    Object {
      "bottom": 49,
    }
  }
  onRefresh={[Function]}
  refreshControl={
    <RefreshControlMock
      onRefresh={[Function]}
      refreshing={false}
    />
  }
  refreshing={false}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTRefreshControl />
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "height": 235,
          "justifyContent": "center",
          "padding": 10,
          "paddingTop": 20,
        }
      }
    >
      <View
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
            }
          }
          style={
            Object {
              "height": 235,
              "position": "absolute",
              "width": 400,
            }
          }
        />
        <View
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 0.75,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "backgroundColor": undefined,
                "opacity": 0.8,
              },
            ]
          }
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "marginTop": 44,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 24,
                "fontWeight": "600",
                "marginBottom": 2,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
          testID="course-details.title-lbl"
        >
          Learn React Native
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontWeight": "600",
                "opacity": 0.9,
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
          testID="course-details.subtitle-lbl"
        >
          Default Term
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "flex-start",
        }
      }
    />
  </View>
</RCTScrollView>
`;

exports[`render without course 1`] = `
<View>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="small"
  />
</View>
`;

exports[`renders correctly 1`] = `
<RCTScrollView
  contentInset={
    Object {
      "bottom": 49,
    }
  }
  onRefresh={undefined}
  refreshControl={
    <RefreshControlMock
      onRefresh={undefined}
      refreshing={false}
    />
  }
  refreshing={false}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTRefreshControl />
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "height": 235,
          "justifyContent": "center",
          "padding": 10,
          "paddingTop": 20,
        }
      }
    >
      <View
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
            }
          }
          style={
            Object {
              "height": 235,
              "position": "absolute",
              "width": 400,
            }
          }
        />
        <View
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 0.75,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "backgroundColor": undefined,
                "opacity": 0.8,
              },
            ]
          }
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "marginTop": 44,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 24,
                "fontWeight": "600",
                "marginBottom": 2,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
          testID="course-details.title-lbl"
        >
          Learn React Native
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontWeight": "600",
                "opacity": 0.9,
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
          testID="course-details.subtitle-lbl"
        >
          Default Term
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "flex-start",
        }
      }
    >
      <TouchableHighlight
        accessibilityLabel={undefined}
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        onPress={[Function]}
        style={
          Array [
            Object {
              "height": 44,
            },
            undefined,
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ]
        }
        testID="courses-details.assignments-cell"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flex": 1,
                "flexDirection": "row",
                "paddingBottom": 12.8,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 12.8,
              },
              Object {
                "backgroundColor": "white",
              },
            ]
          }
        >
          <Image
            source={1}
            style={
              Array [
                Object {
                  "marginRight": 8,
                  "resizeMode": "contain",
                },
                Object {
                  "height": 20,
                  "tintColor": undefined,
                  "width": 21,
                },
              ]
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              numberOfLines={0}
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontWeight": "600",
                    },
                    undefined,
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              Home
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                }
              }
            >
              <View
                style={
                  Object {
                    "alignSelf": "center",
                    "backgroundColor": "transparent",
                    "borderColor": "#c7c7cc",
                    "borderRightWidth": 2,
                    "borderTopWidth": 2,
                    "height": 10,
                    "marginLeft": 7,
                    "transform": Array [
                      Object {
                        "rotate": "45deg",
                      },
                    ],
                    "width": 10,
                  }
                }
              />
            </View>
          </View>
        </View>
      </TouchableHighlight>
    </View>
  </View>
</RCTScrollView>
`;

exports[`renders correctly without tabs 1`] = `
<RCTScrollView
  contentInset={
    Object {
      "bottom": 49,
    }
  }
  onRefresh={undefined}
  refreshControl={
    <RefreshControlMock
      onRefresh={undefined}
      refreshing={false}
    />
  }
  refreshing={false}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTRefreshControl />
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "height": 235,
          "justifyContent": "center",
          "padding": 10,
          "paddingTop": 20,
        }
      }
    >
      <View
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
            }
          }
          style={
            Object {
              "height": 235,
              "position": "absolute",
              "width": 400,
            }
          }
        />
        <View
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 0.75,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "backgroundColor": undefined,
                "opacity": 0.8,
              },
            ]
          }
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "marginTop": 44,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 24,
                "fontWeight": "600",
                "marginBottom": 2,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
          testID="course-details.title-lbl"
        >
          Learn React Native
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontWeight": "600",
                "opacity": 0.9,
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
          testID="course-details.subtitle-lbl"
        >
          Default Term
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "flex-start",
        }
      }
    />
  </View>
</RCTScrollView>
`;

exports[`renders with empty image url 1`] = `
<RCTScrollView
  contentInset={
    Object {
      "bottom": 49,
    }
  }
  onRefresh={undefined}
  refreshControl={
    <RefreshControlMock
      onRefresh={undefined}
      refreshing={false}
    />
  }
  refreshing={false}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTRefreshControl />
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "height": 235,
          "justifyContent": "center",
          "padding": 10,
          "paddingTop": 20,
        }
      }
    >
      <View
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 0.75,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "backgroundColor": undefined,
                "opacity": 1,
              },
            ]
          }
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "marginTop": 44,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 24,
                "fontWeight": "600",
                "marginBottom": 2,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
          testID="course-details.title-lbl"
        >
          Learn React Native
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontWeight": "600",
                "opacity": 0.9,
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
          testID="course-details.subtitle-lbl"
        >
          Default Term
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "flex-start",
        }
      }
    >
      <TouchableHighlight
        accessibilityLabel={undefined}
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        onPress={[Function]}
        style={
          Array [
            Object {
              "height": 44,
            },
            undefined,
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ]
        }
        testID="courses-details.assignments-cell"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flex": 1,
                "flexDirection": "row",
                "paddingBottom": 12.8,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 12.8,
              },
              Object {
                "backgroundColor": "white",
              },
            ]
          }
        >
          <Image
            source={1}
            style={
              Array [
                Object {
                  "marginRight": 8,
                  "resizeMode": "contain",
                },
                Object {
                  "height": 20,
                  "tintColor": undefined,
                  "width": 21,
                },
              ]
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              numberOfLines={0}
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontWeight": "600",
                    },
                    undefined,
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              Home
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                }
              }
            >
              <View
                style={
                  Object {
                    "alignSelf": "center",
                    "backgroundColor": "transparent",
                    "borderColor": "#c7c7cc",
                    "borderRightWidth": 2,
                    "borderTopWidth": 2,
                    "height": 10,
                    "marginLeft": 7,
                    "transform": Array [
                      Object {
                        "rotate": "45deg",
                      },
                    ],
                    "width": 10,
                  }
                }
              />
            </View>
          </View>
        </View>
      </TouchableHighlight>
    </View>
  </View>
</RCTScrollView>
`;

exports[`renders with image url 1`] = `
<RCTScrollView
  contentInset={
    Object {
      "bottom": 49,
    }
  }
  onRefresh={undefined}
  refreshControl={
    <RefreshControlMock
      onRefresh={undefined}
      refreshing={false}
    />
  }
  refreshing={false}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTRefreshControl />
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "height": 235,
          "justifyContent": "center",
          "padding": 10,
          "paddingTop": 20,
        }
      }
    >
      <View
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "http://www.fillmurray.com/100/100",
            }
          }
          style={
            Object {
              "height": 235,
              "position": "absolute",
              "width": 400,
            }
          }
        />
        <View
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 0.75,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "backgroundColor": undefined,
                "opacity": 0.8,
              },
            ]
          }
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "marginTop": 44,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 24,
                "fontWeight": "600",
                "marginBottom": 2,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
          testID="course-details.title-lbl"
        >
          Learn React Native
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontWeight": "600",
                "opacity": 0.9,
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
          testID="course-details.subtitle-lbl"
        >
          Default Term
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "flex-start",
        }
      }
    >
      <TouchableHighlight
        accessibilityLabel={undefined}
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        onPress={[Function]}
        style={
          Array [
            Object {
              "height": 44,
            },
            undefined,
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ]
        }
        testID="courses-details.assignments-cell"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flex": 1,
                "flexDirection": "row",
                "paddingBottom": 12.8,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 12.8,
              },
              Object {
                "backgroundColor": "white",
              },
            ]
          }
        >
          <Image
            source={1}
            style={
              Array [
                Object {
                  "marginRight": 8,
                  "resizeMode": "contain",
                },
                Object {
                  "height": 20,
                  "tintColor": undefined,
                  "width": 21,
                },
              ]
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              numberOfLines={0}
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontWeight": "600",
                    },
                    undefined,
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              Home
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                }
              }
            >
              <View
                style={
                  Object {
                    "alignSelf": "center",
                    "backgroundColor": "transparent",
                    "borderColor": "#c7c7cc",
                    "borderRightWidth": 2,
                    "borderTopWidth": 2,
                    "height": 10,
                    "marginLeft": 7,
                    "transform": Array [
                      Object {
                        "rotate": "45deg",
                      },
                    ],
                    "width": 10,
                  }
                }
              />
            </View>
          </View>
        </View>
      </TouchableHighlight>
    </View>
  </View>
</RCTScrollView>
`;

exports[`renders without image url 1`] = `
<RCTScrollView
  contentInset={
    Object {
      "bottom": 49,
    }
  }
  onRefresh={undefined}
  refreshControl={
    <RefreshControlMock
      onRefresh={undefined}
      refreshing={false}
    />
  }
  refreshing={false}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTRefreshControl />
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "height": 235,
          "justifyContent": "center",
          "padding": 10,
          "paddingTop": 20,
        }
      }
    >
      <View
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 0.75,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "backgroundColor": undefined,
                "opacity": 1,
              },
            ]
          }
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "marginTop": 44,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 24,
                "fontWeight": "600",
                "marginBottom": 2,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
          testID="course-details.title-lbl"
        >
          Learn React Native
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontWeight": "600",
                "opacity": 0.9,
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
          testID="course-details.subtitle-lbl"
        >
          Default Term
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "flex-start",
        }
      }
    >
      <TouchableHighlight
        accessibilityLabel={undefined}
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        onPress={[Function]}
        style={
          Array [
            Object {
              "height": 44,
            },
            undefined,
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ]
        }
        testID="courses-details.assignments-cell"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flex": 1,
                "flexDirection": "row",
                "paddingBottom": 12.8,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 12.8,
              },
              Object {
                "backgroundColor": "white",
              },
            ]
          }
        >
          <Image
            source={1}
            style={
              Array [
                Object {
                  "marginRight": 8,
                  "resizeMode": "contain",
                },
                Object {
                  "height": 20,
                  "tintColor": undefined,
                  "width": 21,
                },
              ]
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              numberOfLines={0}
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontWeight": "600",
                    },
                    undefined,
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              Home
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                }
              }
            >
              <View
                style={
                  Object {
                    "alignSelf": "center",
                    "backgroundColor": "transparent",
                    "borderColor": "#c7c7cc",
                    "borderRightWidth": 2,
                    "borderTopWidth": 2,
                    "height": 10,
                    "marginLeft": 7,
                    "transform": Array [
                      Object {
                        "rotate": "45deg",
                      },
                    ],
                    "width": 10,
                  }
                }
              />
            </View>
          </View>
        </View>
      </TouchableHighlight>
    </View>
  </View>
</RCTScrollView>
`;
